cmake_minimum_required(VERSION 3.10)
project(lab06_homework)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_subdirectory(formatter_lib)
add_subdirectory(formatter_ex_lib)
add_subdirectory(solver_lib)
add_subdirectory(solver_application)
add_subdirectory(hello_world_application)

if(UNIX AND NOT APPLE)
    set(CPACK_GENERATOR "DEB;RPM")
elseif(APPLE)
    set(CPACK_GENERATOR "Bundle")
elseif(WIN32)
    set(CPACK_GENERATOR "NSIS")
endif()
set(CPACK_PACKAGE_NAME "solver")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_PACKAGE_VENDOR "gremlin079")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "gremlin079")
set(CPACK_RPM_PACKAGE_RELEASE 1)
set(CPACK_NSIS_MODIFY_PATH ON)
include(CPack)
